--- a/de.bund.bfr.knime.foodprocess.pcml/plugin.xml
+++ b/de.bund.bfr.knime.foodprocess.pcml/plugin.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-
+<extension point="org.knime.core.PortType">
+  
+    <portType
+      color="000000"
+      hidden="false"
+      name="PCML PortObject"
+      objectClass="de.bund.bfr.knime.pcml.port.PCMLPortObject"
+      
+      objectSerializer="de.bund.bfr.knime.pcml.port.PCMLPortObjectSerializer"
+      specClass="de.bund.bfr.knime.fsklab.pcml.port.PCMLPortObjectSpec"
+      specSerializer="de.bund.bfr.knime.pcml.port.PCMLPortObjectSpecSerializer">
+    </portType>
+    
+  </extension>
    <extension
          point="org.knime.workbench.repository.nodes">
       <node
