--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: java
 dist: trusty
 jdk:
   - openjdk8
-script:
-- xvfb-run mvn verify -B -Pjacoco
-- bash deployment_check.sh
+script: xvfb-run mvn verify -B -Pjacoco
 
 # Cache maven repository to speed up build
 cache:
