--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
 
 - KNIME_OUT=$(knime_3.7.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF_NAME" --launcher.suppressErrors)
 - if [[ "$KNIME_OUT" != *"$KNIME_SUCCESS"* ]]; then  echo "Workflow failed";exit 1; else echo "3.7.2 WORKFLOW SUCCESSFUL ON FRESH INSTALL"; fi
-
+- rm outfile.table
 - echo "REMOVE NEW FSK TO TEST UPDATE FROM OLDER VERSION"
 - knime_3.7.2/knime -application org.eclipse.equinox.p2.director -uninstallIU de.bund.bfr.knime.fsklab.feature.feature.group
 - knime_3.7.2/knime -application org.eclipse.equinox.p2.director -lir
@@ -50,7 +50,7 @@ script:
 
 - KNIME_OUT=$(knime_3.7.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF_NAME" --launcher.suppressErrors)
 - if [[ "$KNIME_OUT" != *"$KNIME_SUCCESS"* ]]; then  echo "Workflow failed";exit 1; else echo "3.7.2 WORKFLOW SUCCESSFUL ON UPDATE"; fi
-
+- rm outfile.table
 
 - echo "CLEANING KNIME"
 - rm -Rf knime_3.7.2
@@ -69,20 +69,20 @@ script:
 - echo "INSTALL NEW FSK-LAB INTO FRESH KNIME"
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -repository "$KNIME41,$NEW_FSK" -installIU de.bund.bfr.knime.fsklab.feature.feature.group,org.knime.features.testing.application.feature.group
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -lir
-- wget -v "$WF/$WF_NAME"
+-
 - 
 - knime_4.1.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF_NAME" --launcher.suppressErrors
 - OUTFILE=outfile.table
 - if test -f "$OUTFILE"; then echo "4.1.2 WORKFLOW SUCCESSFUL ON FRESH INSTALL"; else echo "WORKFLOW NOT EXECUTED";exit 1; fi
 - rm outfile.table
-
+-
 - echo "REMOVE NEW FSK TO TEST UPDATE FROM OLDER VERSION"
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -uninstallIU de.bund.bfr.knime.fsklab.feature.feature.group
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -lir
-
-
+-
+-
 - echo "================== TESTING THE UPDATE FROM OLD FSK-LAB ==============================================================================="
-
+-
 - echo "INSTALL OLD FSK-LAB TEMPORARILY"
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -repository "$KNIME41,$OLD_FSK" -installIU de.bund.bfr.knime.fsklab.feature.feature.group
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -lir
@@ -97,7 +97,7 @@ script:
 - if test -f "$OUTFILE"; then echo "4.1.2 WORKFLOW SUCCESSFUL ON UPDATE"; else echo "WORKFLOW NOT EXECUTED";exit 1; fi
 - rm outfile.table
 - rm $WF_NAME
-
+-
 - echo "CLEANING KNIME"
 - rm -Rf knime_4.1.2
 
