--- a/.travis.yml
+++ b/.travis.yml
@@ -33,16 +33,17 @@ script:
 - knime_3.7.2/knime -application org.eclipse.equinox.p2.director -repository "$KNIME37,$NEW_FSK" -installIU de.bund.bfr.knime.fsklab.feature.feature.group,org.knime.features.testingapplication.feature.group
 - knime_3.7.2/knime -application org.eclipse.equinox.p2.director -lir
 
-- for WF in $WF_FILES
-- do
+- |
+  for WF in $WF_FILES
+  do
  
  
 
-- KNIME_OUT=$(knime_3.7.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors)
-- if [[ "$KNIME_OUT" != *"$KNIME_SUCCESS"* ]]; then  echo "Workflow failed";exit 1; else echo "3.7.2 WORKFLOW SUCCESSFUL ON FRESH INSTALL"; fi
-- rm outfile.table
+  KNIME_OUT=$(knime_3.7.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors)
+  if [[ "$KNIME_OUT" != *"$KNIME_SUCCESS"* ]]; then  echo "Workflow failed";exit 1; else echo "3.7.2 WORKFLOW SUCCESSFUL ON FRESH INSTALL"; fi
+  rm outfile.table
 
-- done
+  done
 
 
 
@@ -63,14 +64,15 @@ script:
 - knime_3.7.2/knime -application org.eclipse.equinox.p2.director -repository "$KNIME37,$NEW_FSK" -installIU de.bund.bfr.knime.fsklab.feature.feature.group
 - knime_3.7.2/knime -application org.eclipse.equinox.p2.director -lir
 
-- for WF in $WF_FILES
-- do
+- |
+  for WF in $WF_FILES
+  do
  
-- KNIME_OUT=$(knime_3.7.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors)
-- if [[ "$KNIME_OUT" != *"$KNIME_SUCCESS"* ]]; then  echo "Workflow failed";exit 1; else echo "3.7.2 WORKFLOW SUCCESSFUL ON UPDATE"; fi
-- rm outfile.table
+  KNIME_OUT=$(knime_3.7.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors)
+  if [[ "$KNIME_OUT" != *"$KNIME_SUCCESS"* ]]; then  echo "Workflow failed";exit 1; else echo "3.7.2 WORKFLOW SUCCESSFUL ON UPDATE"; fi
+  rm outfile.table
 
-- done
+  done
 
 
 - echo "CLEANING KNIME"
@@ -91,15 +93,16 @@ script:
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -repository "$KNIME41,$NEW_FSK" -installIU de.bund.bfr.knime.fsklab.feature.feature.group,org.knime.features.testing.application.feature.group
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -lir
 -
-- for WF in $WF_FILES
-- do
+- |
+  for WF in $WF_FILES
+  do
  
-- knime_4.1.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors
-- OUTFILE=outfile.table
-- if test -f "$OUTFILE"; then echo "4.1.2 WORKFLOW SUCCESSFUL ON FRESH INSTALL"; else echo "WORKFLOW NOT EXECUTED";exit 1; fi
-- rm outfile.table
+  knime_4.1.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors
+  OUTFILE=outfile.table
+  if test -f "$OUTFILE"; then echo "4.1.2 WORKFLOW SUCCESSFUL ON FRESH INSTALL"; else echo "WORKFLOW NOT EXECUTED";exit 1; fi
+  rm outfile.table
 
-- done
+  done
 
 
 - echo "REMOVE NEW FSK TO TEST UPDATE FROM OLDER VERSION"
@@ -120,15 +123,16 @@ script:
 - knime_4.1.2/knime -application org.eclipse.equinox.p2.director -lir
 
 
-- for WF in $WF_FILES
-- do
+- |
+  for WF in $WF_FILES
+  do
 
-- knime_4.1.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors 
-- OUTFILE=outfile.table
-- if test -f "$OUTFILE"; then echo "4.1.2 WORKFLOW SUCCESSFUL ON UPDATE"; else echo "WORKFLOW NOT EXECUTED";exit 1; fi
-- rm outfile.table
+  knime_4.1.2/knime -nosplash -reset -nosave -application org.knime.product.KNIME_BATCH_APPLICATION -workflowFile="$WF" --launcher.suppressErrors 
+  OUTFILE=outfile.table
+  if test -f "$OUTFILE"; then echo "4.1.2 WORKFLOW SUCCESSFUL ON UPDATE"; else echo "WORKFLOW NOT EXECUTED";exit 1; fi
+  rm outfile.table
 
-- done
+  done
 
 
 - echo "CLEANING KNIME"
