--no-transfer-progress

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 jdk:
   - openjdk8
 script:
-#- xvfb-run mvn verify -B -Pjacoco
+- xvfb-run mvn verify -B -Pjacoco --no-transfer-progress
 #- if[$TRAVIS_BRANCH = 'test'];then
 - bash check_on_deploy.sh
 
