--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ cache:
 # Before the build, install R with required packages
 before_install:
 # Install R 3.2 instead of R 3.0 from base Ubuntu
-#- sudo sh -c 'echo "deb http://cran.rstudio.com/bin/linux/ubuntu trusty/" >> /etc/apt/sources.list'
-#- sudo apt-get --allow-unauthenticated update -qq
-#- sudo apt-get --allow-unauthenticated install r-base -qq
+- sudo sh -c 'echo "deb http://cran.rstudio.com/bin/linux/ubuntu trusty/" >> /etc/apt/sources.list'
+- sudo apt-get --allow-unauthenticated update -qq
+- sudo apt-get --allow-unauthenticated install r-base -qq
 # Install packages
-#- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
-#- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="https://cran.rstudio.com", Ncpus=2)'
+- sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
+- sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="https://cran.rstudio.com", Ncpus=2)'
 - chmod +x check_on_deploy.sh
 
 # If build succeeds upload test coverage report
