check only on test branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,8 @@ dist: trusty
 jdk:
   - openjdk8
 script:
-- xvfb-run mvn verify -B -Pjacoco -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-#- if[$TRAVIS_BRANCH = 'test'];then
-- bash check_on_deploy.sh
+- xvfb-run mvn verify -B -Pjacoco
+- if [$TRAVIS_BRANCH == "test"]; then bash check_on_deploy.sh; fi
 
 
 
