--- a/de.bund.bfr.knime.fsklab.nodes.deprecated.test/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated.test/build.properties
@@ -1,4 +1,5 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               jsbml-1.3.1-with-dependencies.jar
