--- a/de.bund.bfr.knime.fsklab.nodes.deprecated/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/fskml-1.0.5.jar"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/jsbml-1.3.1-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
