--- a/de.bund.bfr.knime.fsklab.nodes.deprecated2/.classpath
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated2/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/fskml-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="libs/jsbml-1.3.1-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
