--- a/de.bund.bfr.knime.fsklab.nodes.deprecated2/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated2/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                libs/fskml-0.0.1-SNAPSHOT.jar,\
-               icons/
+               icons/,\
+               libs/jsbml-1.3.1-with-dependencies.jar
