--- a/de.bund.bfr.knime.pmm.nodes/build.properties
+++ b/de.bund.bfr.knime.pmm.nodes/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                nashorn.jar,\
                metanode_templates/,\
                fskml-0.0.1-SNAPSHOT.jar,\
-               .
+               .,\
+               jsbml-1.3.1-with-dependencies.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
