--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 # Install packages
 - sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
 - sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="https://cran.rstudio.com", Ncpus=2)'
-- chmod +x check_on_deploy.sh
+- chmod +x deploy_test_linux.sh
 
 # If build succeeds upload test coverage report
 after_success:
