--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+
 language: java
 dist: trusty
 jdk:
   - openjdk8
 script:
 - xvfb-run mvn verify -B -Pjacoco
-- if [[ $TRAVIS_BRANCH == *"deploy_win"* ]]; then bash deploy_test_linux.sh; fi
+
 
 # Cache maven repository to speed up build
 cache:
@@ -20,7 +21,7 @@ before_install:
 # Install packages
 - sudo apt-get install libcurl4-openssl-dev libxml2-dev libssl-dev -qq
 - sudo R --vanilla -e 'install.packages(c("Rserve", "miniCRAN", "ggplot2", "svglite"), repos="https://cran.rstudio.com", Ncpus=2)'
-- chmod +x deploy_test_linux.sh
+
 
 # If build succeeds upload test coverage report
 after_success:
@@ -34,3 +35,8 @@ deploy:
   skip_cleanup: true # to upload artifacts created during the build
   script: bash bintray.sh
   on: test
+- provider: script
+  skip_cleanup: true # to upload artifacts created during the build
+  script: bash bintray_nightly.sh
+  on: master
+  condition: $TRAVIS_EVENT_TYPE = cron
