--- a/de.bund.bfr.knime.testreport/pom.xml
+++ b/de.bund.bfr.knime.testreport/pom.xml
@@ -71,6 +71,12 @@
 		</dependency>
 		<dependency>
 			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.fsklab.nodes.deprecated.tests</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
 			<artifactId>de.bund.bfr.knime.fsklab.nodes.deprecated2</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
