--- a/pom.xml
+++ b/pom.xml
@@ -64,10 +64,11 @@
 		<!-- Test plugins and fragments -->
 		<module>de.bund.bfr.knime.tests</module>
 		<!-- <module>de.bund.bfr.knime.testflows</module> -->
+		<module>de.bund.bfr.knime.foodprocess.tests</module>
 		<module>de.bund.bfr.knime.fsklab.metadata.model.tests</module>
+		<module>de.bund.bfr.knime.fsklab.nodes.deprecated.tests</module>
 		<module>de.bund.bfr.knime.pmm.common.tests</module>
 		<module>de.bund.bfr.knime.pmm.nodes.tests</module>
-		<module>de.bund.bfr.knime.foodprocess.tests</module>
 
 		<!-- Test report -->
 		<module>de.bund.bfr.knime.testreport</module>
