Refactor de.bund.bfr.knime.tests
should be refactored as a fragment project of different host plugins. It
is also defined currently as a plugin, needing to defined all of its
dependencies which is not needed for fragments. It contains tests for:

- de.bund.bfr.knime.fsklab.nodes for the packages
- de.bund.bfr.knime.fsklab.metadata.model for the package
de.bund.bfr.knime.pmm.fskx and class FskMetaData.
- de.bund.bfr.knime.pmm.nodes for the package
de.bund.bfr.knime.pmm.js.common.

--- a/de.bund.bfr.knime.testreport/pom.xml
+++ b/de.bund.bfr.knime.testreport/pom.xml
@@ -59,6 +59,12 @@
 		</dependency>
 		<dependency>
 			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.fsklab.nodes.tests</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
 			<artifactId>de.bund.bfr.knime.fsklab.nodes.common</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
@@ -108,12 +114,6 @@
 		<dependency>
 			<groupId>de.bund.bfr.knime</groupId>
 			<artifactId>de.bund.bfr.knime.pmm.common.tests</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.bund.bfr.knime</groupId>
-			<artifactId>de.bund.bfr.knime.tests</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
