changed travis.yml to deploy on master if condition is met (cron)

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,6 @@ deploy:
 - provider: script
   skip_cleanup: true # to upload artifacts created during the build
   script: bash bintray_nightly.sh
-  on: master
-  condition: $TRAVIS_EVENT_TYPE = cron
+  on: 
+    branch: master
+    condition: $TRAVIS_EVENT_TYPE = cron
