Repackage SBML to separate plugin

--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -15,8 +15,7 @@ bin.includes = META-INF/,\
                libs/batik-util-1.7.jar,\
                js-src/,\
                libs/togglz-core-2.6.1.Final.jar,\
-               js-lib/,\
-               libs/jsbml-1.3.1-with-dependencies.jar
+               js-lib/
 source.. = src/,\
            resources/
            output.. = bin/
