--- a/de.bund.bfr.knime.fsklab.nodes.deprecated/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes.deprecated/build.properties
@@ -5,5 +5,4 @@ bin.includes = META-INF/,\
                plugin.xml,\
                libs/fskml-1.0.5.jar,\
                libs/bfr-swing-1.0-SNAPSHOT.jar,\
-               js-src/,\
-               libs/jsbml-1.3.1-with-dependencies.jar
+               js-src/
