--- a/de.bund.bfr.knime.foodprocess/plugin.xml
+++ b/de.bund.bfr.knime.foodprocess/plugin.xml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <?eclipse version="3.0"?><plugin>
 
-   <!-- This is an example for providing an own category 
-      <extension
-         point="org.knime.workbench.repository.categories">
-      <category
-            description="Category containing my nodes"
-            icon="icons/default.png"
-            level-id="myNodes"
-            name="My nodes"
-            path="/"/>
-   </extension>
-   -->
    <extension point="org.knime.workbench.repository.categories">
       <category after="pmmlab" icon="icons/FoodProcess.png" level-id="foodprocess" name="Foodprocess" path="/">
       </category>
    </extension>
    
    <extension point="org.knime.workbench.repository.nodes">
-      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.FoodProcessNodeFactory" id="de.bund.bfr.knime.foodprocess.FoodProcessNodeFactory"/>
-      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.addons.IngredientsNodeFactory" id="de.bund.bfr.knime.foodprocess.ingredients.IngredientsNodeFactory">
-      </node>
-      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.addons.AgentsNodeFactory" id="de.bund.bfr.knime.foodprocess.ingredients.AgentsNodeFactory">
-      </node>
-<node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.db.WriterNodeFactory" id="de.bund.bfr.knime.foodprocess.db.WriterNodeFactory"/>
-</extension>
+      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.FoodProcessNodeFactory" />
+      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.addons.IngredientsNodeFactory" />
+      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.addons.AgentsNodeFactory" />
+      <node category-path="/foodprocess" factory-class="de.bund.bfr.knime.foodprocess.db.WriterNodeFactory" />
+   </extension>
    <extension point="org.eclipse.ui.newWizards">
       <wizard class="de.bund.bfr.knime.foodprocess.ui.MyPCImportWizard" id="de.bund.bfr.knime.foodprocess.ui.MyPCImportWizard" name="Process chain importer">
          <description>
