Replace null with Optional in vocabularies repositories
The vocabularies repositories return Optional instead of null for empty
queries performed with getById.

--- a/de.bund.bfr.knime.testreport/pom.xml
+++ b/de.bund.bfr.knime.testreport/pom.xml
@@ -101,6 +101,18 @@
 		</dependency>
 		<dependency>
 			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.fsklab.vocabularies</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
+			<artifactId>de.bund.bfr.knime.fsklab.vocabularies.tests</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>	
+		<dependency>
+			<groupId>de.bund.bfr.knime</groupId>
 			<artifactId>de.bund.bfr.knime.pmm.bfrdbiface.lib</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
