--- a/de.bund.bfr.knime.fsklab.service/build.properties
+++ b/de.bund.bfr.knime.fsklab.service/build.properties
@@ -1,6 +1,6 @@
-source.. = src/,\
-           resources/
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               vocabularies-0.0.1.jar
+               vocabularies-0.0.1.jar,\
+               data/
