--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>de.bund.bfr.knime.fsklab.nodes.deprecated2</module>
 		<module>de.bund.bfr.knime.fsklab.preferences</module>
 		<module>de.bund.bfr.knime.fsklab.r</module>
+		<module>de.bund.bfr.knime.fsklab.service</module>
 		<module>de.bund.bfr.knime.internal.nodes</module>
 		<module>de.bund.bfr.knime.nodes.util</module>
 		<module>de.bund.bfr.knime.pmm.bfrdbiface.lib</module>
