Add names endpoint for each vocabulary
/api/<vocabulary>?names

--- a/de.bund.bfr.knime.fsklab.service/build.properties
+++ b/de.bund.bfr.knime.fsklab.service/build.properties
@@ -2,5 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               vocabularies-0.0.1.jar,\
-               data/
+               data/,\
+               vocabularies-0.1.0.jar
