Update FSK service

--- a/de.bund.bfr.knime.fsklab.service/build.properties
+++ b/de.bund.bfr.knime.fsklab.service/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                data/,\
-               vocabularies-0.1.0.jar
+               vocabularies-0.1.0.jar,\
+               spark-core-2.9.1.jar
