--- a/pom.xml
+++ b/pom.xml
@@ -17,23 +17,10 @@
 		<jacoco-version>0.7.8</jacoco-version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>knime-37</id>
-			<url>https://update.knime.org/analytics-platform/3.7</url>
-			<layout>p2</layout>
-		</repository>
-		<repository>
-			<id>knime-testflows</id>
-			<url>https://3d-e-chem.github.io/updates</url>
-			<layout>p2</layout>
-		</repository>
-		<repository>
-			<id>RBundles</id>
-			<url>https://dl.bintray.com/silebat/RBundles</url>
-			<layout>p2</layout>
-		</repository>
-	</repositories>
+	<!-- <repositories> <repository> <id>knime-37</id> <url>https://update.knime.org/analytics-platform/3.7</url> 
+		<layout>p2</layout> </repository> <repository> <id>knime-testflows</id> <url>https://3d-e-chem.github.io/updates</url> 
+		<layout>p2</layout> </repository> <repository> <id>RBundles</id> <url>https://dl.bintray.com/silebat/RBundles</url> 
+		<layout>p2</layout> </repository> </repositories> -->
 
 	<modules>
 		<!-- Plugins -->
@@ -71,6 +58,7 @@
 
 		<module>dependencies</module>
 		<module>features</module>
+		<module>target-platform</module>
 
 		<!-- Update site -->
 		<module>de.bund.bfr.knime.update</module>
@@ -129,6 +117,38 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<target>
+						<artifact>
+							<groupId>de.bund.bfr.knime</groupId>
+							<artifactId>target-platform</artifactId>
+							<version>1.0.0-SNAPSHOT</version>
+						</artifact>
+					</target>
+					<environments>
+						<environment>
+							<os>linux</os>
+							<ws>gtk</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>win32</os>
+							<ws>win32</ws>
+							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>x86_64</arch>
+						</environment>
+					</environments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
