--- a/de.bund.bfr.knime.fsklab.nodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.nodes/build.properties
@@ -16,6 +16,5 @@ bin.includes = META-INF/,\
                js-src/,\
                libs/togglz-core-2.6.1.Final.jar,\
                js-lib/
-source.. = src/,\
-           resources/
+source.. = src/
            output.. = bin/
