added source folder for 1.7.2 nodes in deprecatednode

--- a/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
@@ -1,5 +1,6 @@
 source.. = src-1_0_2/,\
-           src-prerakip/
+           src-prerakip/,\
+           src-1_7_2/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
