--- a/de.bund.bfr.knime.fsklab.deprecatednodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src-1_0_2"/>
 	<classpathentry kind="src" path="src-prerakip"/>
+	<classpathentry kind="src" path="src-1_7_2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
