--- a/de.bund.bfr.knime.fsklab.deprecatednodes/plugin.xml
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/plugin.xml
@@ -3,6 +3,29 @@
 <plugin>
 
   <extension point="org.knime.core.PortType">
+  
+    <!-- Deprecated 1.7.2 FskPortObject -->
+    <portType
+      color="000000"
+      hidden="false"
+      name="FSK object"
+      objectClass="de.bund.bfr.knime.fsklab.FskPortObject"
+      objectSerializer="de.bund.bfr.knime.fsklab.FskPortObject$Serializer"
+      specClass="de.bund.bfr.knime.fsklab.FskPortObjectSpec"
+      specSerializer="de.bund.bfr.knime.fsklab.FskPortObjectSpec$Serializer">
+    </portType>
+    
+    <!-- Deprecated 1.7.2 CombinedFskPortObject -->
+    <portType
+      color="FF4500"
+      hidden="false"
+      name="Combined FSK object"
+      objectClass="de.bund.bfr.knime.fsklab.CombinedFskPortObject"
+      objectSerializer="de.bund.bfr.knime.fsklab.CombinedFskPortObject$Serializer"
+      specClass="de.bund.bfr.knime.fsklab.CombinedFskPortObjectSpec"
+      specSerializer="de.bund.bfr.knime.fsklab.CombinedFskPortObjectSpec$Serializer">
+    </portType>
+  
 	<!-- Deprecated: FSK port object for deprecated nodes-->
     <portType
       color="588C7E"
