--- a/de.bund.bfr.knime.fsklab.deprecatednodes/.classpath
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/.classpath
@@ -7,5 +7,11 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="libs/bfr-swing-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="libs/fskml-1.0.12.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jaxen-1.1.6.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jdom-contrib-1.1.3.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jlibsedml-2.2.3.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/jmathml-2.2.1.jar"/>
+	<classpathentry kind="lib" path="sedml_libs/xom-1.2.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
