--- a/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
@@ -7,4 +7,10 @@ bin.includes = META-INF/,\
                libs/,\
                plugin.xml,\
                libs/bfr-swing-1.0-SNAPSHOT.jar,\
-               libs/fskml-1.0.12.jar
+               libs/fskml-1.0.12.jar,\
+               sedml_libs/jaxen-1.1.6.jar,\
+               sedml_libs/jdom-1.1.3.jar,\
+               sedml_libs/jdom-contrib-1.1.3.jar,\
+               sedml_libs/jlibsedml-2.2.3.jar,\
+               sedml_libs/jmathml-2.2.1.jar,\
+               sedml_libs/xom-1.2.5.jar
