Add deployment for development branch to development update site

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,10 @@ deploy:
   script: bash bintray.sh
   on: test
 - provider: script
+  skip_cleanup: true
+  script: bash bintray_development.sh
+  on: development
+- provider: script
   skip_cleanup: true # to upload artifacts created during the build
   script: bash bintray_nightly.sh
   on: 
