--- a/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
+++ b/de.bund.bfr.knime.fsklab.deprecatednodes/build.properties
@@ -13,4 +13,6 @@ bin.includes = META-INF/,\
                sedml_libs/jdom-contrib-1.1.3.jar,\
                sedml_libs/jlibsedml-2.2.3.jar,\
                sedml_libs/jmathml-2.2.1.jar,\
-               sedml_libs/xom-1.2.5.jar
+               sedml_libs/xom-1.2.5.jar,\
+               js-lib/,\
+               js-src/
